@@ -5,70 +5,146 @@
 
 package io.stackgres.operator.conciliation.factory.cluster.sidecars.fluentbit;
 
-import java.util.List;
 import java.util.Map;
 import java.util.Optional;
+import java.util.stream.Stream;
 
 import javax.inject.Inject;
 import javax.inject.Singleton;
 
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableMap;
 import io.fabric8.kubernetes.api.model.ConfigMap;
 import io.fabric8.kubernetes.api.model.ConfigMapBuilder;
-import io.fabric8.kubernetes.api.model.EnvVar;
+import io.fabric8.kubernetes.api.model.ConfigMapVolumeSourceBuilder;
+import io.fabric8.kubernetes.api.model.Container;
+import io.fabric8.kubernetes.api.model.ContainerBuilder;
+import io.fabric8.kubernetes.api.model.EnvVarBuilder;
 import io.fabric8.kubernetes.api.model.HasMetadata;
-import io.fabric8.kubernetes.api.model.VolumeMount;
+import io.fabric8.kubernetes.api.model.Volume;
+import io.fabric8.kubernetes.api.model.VolumeBuilder;
 import io.fabric8.kubernetes.api.model.VolumeMountBuilder;
 import io.stackgres.common.ClusterStatefulSetPath;
 import io.stackgres.common.FluentdUtil;
 import io.stackgres.common.LabelFactoryForCluster;
+import io.stackgres.common.StackGresComponent;
 import io.stackgres.common.StackGresContainer;
+import io.stackgres.common.StackGresContext;
 import io.stackgres.common.StackGresUtil;
 import io.stackgres.common.StackGresVolume;
 import io.stackgres.common.crd.sgcluster.StackGresCluster;
 import io.stackgres.operator.common.Sidecar;
 import io.stackgres.operator.conciliation.OperatorVersionBinder;
 import io.stackgres.operator.conciliation.cluster.StackGresClusterContext;
+import io.stackgres.operator.conciliation.factory.ContainerFactory;
+import io.stackgres.operator.conciliation.factory.ImmutableVolumePair;
+import io.stackgres.operator.conciliation.factory.PostgresSocketMount;
 import io.stackgres.operator.conciliation.factory.RunningContainer;
+import io.stackgres.operator.conciliation.factory.ScriptTemplatesVolumeMounts;
+import io.stackgres.operator.conciliation.factory.VolumeFactory;
+import io.stackgres.operator.conciliation.factory.VolumePair;
 import io.stackgres.operator.conciliation.factory.cluster.ClusterContainerContext;
 import io.stackgres.operator.conciliation.factory.cluster.LogVolumeMounts;
+import io.stackgres.operatorframework.resource.ResourceUtil;
+import org.jetbrains.annotations.NotNull;
 
 @Sidecar(StackGresContainer.FLUENT_BIT)
 @Singleton
 @OperatorVersionBinder
 @RunningContainer(StackGresContainer.FLUENT_BIT)
-public class FluentBit extends AbstractFluentBit {
+public class FluentBit implements
+    ContainerFactory<ClusterContainerContext>,
+    VolumeFactory<StackGresClusterContext> {
+
+  private static final String CONFIG_SUFFIX = "-fluent-bit";
+
+  private final LabelFactoryForCluster<StackGresCluster> labelFactory;
 
   private final LogVolumeMounts logMounts;
+  private final PostgresSocketMount postgresSocket;
+  private final ScriptTemplatesVolumeMounts scriptTemplatesVolumeMounts;
 
   @Inject
   public FluentBit(LabelFactoryForCluster<StackGresCluster> labelFactory,
-      LogVolumeMounts logMounts) {
-    super(labelFactory);
+      LogVolumeMounts logMounts,
+      PostgresSocketMount postgresSocket,
+      ScriptTemplatesVolumeMounts scriptTemplatesVolumeMounts) {
+    this.labelFactory = labelFactory;
     this.logMounts = logMounts;
+    this.postgresSocket = postgresSocket;
+    this.scriptTemplatesVolumeMounts = scriptTemplatesVolumeMounts;
+  }
+
+  public static String configName(StackGresClusterContext clusterContext) {
+    String name = clusterContext.getSource().getMetadata().getName();
+    return ResourceUtil.resourceName(name + CONFIG_SUFFIX);
+  }
+
+  public static String tagName(StackGresCluster cluster, String suffix) {
+    final String name = cluster.getMetadata().getName();
+    final String namespace = cluster.getMetadata().getNamespace();
+    return namespace + "." + name + "." + suffix;
   }
 
   @Override
-  protected List<VolumeMount> getVolumeMounts(ClusterContainerContext context) {
-    return ImmutableList.<VolumeMount>builder()
-        .addAll(logMounts.getVolumeMounts(context))
-        .add(
-            new VolumeMountBuilder()
-                .withName(StackGresVolume.FLUENT_BIT.getName())
-                .withMountPath("/etc/fluent-bit")
-                .withReadOnly(Boolean.TRUE)
-                .build())
+  public boolean isActivated(ClusterContainerContext context) {
+    return context.getClusterContext().getSource().getSpec().getDistributedLogs() != null;
+  }
+
+  @Override
+  public Map<String, String> getComponentVersions(ClusterContainerContext context) {
+    return Map.of(
+        StackGresContext.FLUENTBIT_VERSION_KEY,
+        StackGresComponent.FLUENT_BIT.get(context.getClusterContext().getCluster())
+        .getLatestVersion());
+  }
+
+  public Container getContainer(ClusterContainerContext context) {
+    return new ContainerBuilder()
+        .withName(StackGresContainer.FLUENT_BIT.getName())
+        .withImage(StackGresComponent.FLUENT_BIT.get(context.getClusterContext().getCluster())
+            .getLatestImageName())
+        .withImagePullPolicy("IfNotPresent")
+        .withStdin(Boolean.TRUE)
+        .withTty(Boolean.TRUE)
+        .withCommand("/bin/sh", "-ex",
+            ClusterStatefulSetPath.TEMPLATES_PATH.path()
+                + "/" + ClusterStatefulSetPath.LOCAL_BIN_START_FLUENTBIT_SH_PATH.filename())
+        .addToEnv(
+            new EnvVarBuilder()
+            .withName("FLUENT_BIT_LAST_CONFIG_PATH")
+            .withValue(ClusterStatefulSetPath.FLUENT_BIT_LAST_CONFIG_PATH.path())
+            .build())
+        .addAllToEnv(logMounts.getDerivedEnvVars(context))
+        .addAllToEnv(postgresSocket.getDerivedEnvVars(context))
+        .addAllToEnv(scriptTemplatesVolumeMounts.getDerivedEnvVars(context))
+        .addAllToVolumeMounts(logMounts.getVolumeMounts(context))
+        .addAllToVolumeMounts(postgresSocket.getVolumeMounts(context))
+        .addAllToVolumeMounts(scriptTemplatesVolumeMounts.getVolumeMounts(context))
+        .addToVolumeMounts(new VolumeMountBuilder()
+            .withName(StackGresVolume.FLUENT_BIT.getName())
+            .withMountPath("/etc/fluent-bit")
+            .withReadOnly(Boolean.TRUE)
+            .build())
         .build();
   }
 
   @Override
-  protected List<EnvVar> getContainerEnvironmentVariables(
-      ClusterContainerContext context) {
-    return logMounts.getDerivedEnvVars(context);
+  public @NotNull Stream<VolumePair> buildVolumes(StackGresClusterContext context) {
+    return Stream.of(ImmutableVolumePair.builder()
+        .volume(buildConfiMapVolume(context))
+        .source(buildConfiMapSource(context))
+        .build());
   }
 
-  protected Optional<HasMetadata> buildSource(StackGresClusterContext context) {
+  private Volume buildConfiMapVolume(StackGresClusterContext context) {
+    return new VolumeBuilder()
+        .withName(StackGresVolume.FLUENT_BIT.getName())
+        .withConfigMap(new ConfigMapVolumeSourceBuilder()
+            .withName(configName(context))
+            .build())
+        .build();
+  }
+
+  private Optional<HasMetadata> buildConfiMapSource(StackGresClusterContext context) {
     final StackGresCluster cluster = context.getSource();
     if (cluster.getSpec().getDistributedLogs() == null) {
       return Optional.empty();
@@ -179,7 +255,7 @@ public class FluentBit extends AbstractFluentBit {
         + "    Name              stdout\n"
         + "    Match             " + tagName(cluster, "*") + "\n"
         + "\n";
-    Map<String, String> data = ImmutableMap.of(
+    Map<String, String> data = Map.of(
         "parsers.conf", parsersConfigFile,
         "fluentbit.conf", fluentBitConfigFile);
 
